Fixed merch auto scroll on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -191,7 +191,7 @@ body {
       1rem 0,
       100% 0,
       100% calc(100% - 0.8rem),
-      calc(100% - 1rem) 90%,
+      calc(100% - 1rem) 100%,
       0 100%,
       0 1rem
     );
